[package]
name = "krak"
version = "0.1.0"
authors = ["Ajay Rathore <rathore.ajay@gmail.com>"]
edition = "2018"

[dependencies]
rkdb = "0.4.0"
avro-rs = "0.7.0"
schema_registry_converter = { git = "https://github.com/gklijs/schema_registry_converter" }
kafka = "0.8.0"
failure = "0.1.5"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"

[lib]
name = "krak"
crate-type = ["cdylib"]

[profile.release]
opt-level = 3
debug = true
rpath = false
lto = false
debug-assertions = false
codegen-units = 1
